--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -38,7 +38,7 @@
                         space to express yourself, there is something for everyone to enjoy.</p>
                 </div>
                 <div class="card-footer custom-footer">
-                    <a class="btn btn-primary btn-sm" href="{% url 'venue_list' %}" aria-labels="Link to Venues page">Explore more</a>
+                    <a class="btn btn-primary btn-sm" href="{% url 'venue_list' %}?category=Café" aria-labels="Link to Venues page">Explore more</a>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
                         are community hubs where diversity is celebrated and everyone is welcome.</p>
                 </div>
                 <div class="card-footer custom-footer">
-                    <a class="btn btn-primary btn-sm" href="{% url 'venue_list' %}" aria-labels="Link to Venues page">Explore more</a>
+                    <a class="btn btn-primary btn-sm" href="{% url 'venue_list' %}?category=Club" aria-labels="Link to Venues page">Explore more</a>
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@
                         compassionate and professional support tailored to the unique needs of the community.</p>
                 </div>
                 <div class="card-footer custom-footer">
-                    <a class="btn btn-primary btn-sm" href="{% url 'venue_list' %}" aria-labels="Link to Venues page">Explore more</a>
+                    <a class="btn btn-primary btn-sm" href="{% url 'venue_list' %}?category=Support Center" aria-labels="Link to Venues page">Explore more</a>
                 </div>
             </div>
         </div>
