--- a/templates/about.html
+++ b/templates/about.html
@@ -79,13 +79,11 @@
                         src="{% static 'images\david.png' %}" alt="Davidimage">
                     <div class="card-body text-center">
                         <h5 class="card-title fw-bold members">David</h5>
-                        <p class="card-text text-justify-custom">Lorem ipsum dolor sit amet, consectetur 
-                            adipiscing elit. Fusce laoreet mi sed risus tincidunt sagittis. Aenean a risus 
-                            ex. Integer non ultrices felis. Cras vel massa in ipsum mattis efficitur. 
-                            Curabitur vitae rhoncus magna. Suspendisse ullamcorper gravida elementum. 
-                            Vestibulum ut pellentesque sem. Aenean bibendum maximus velit. Proin eu augue 
-                            vel ex aliquam fermentum a eu turpis. Maecenas laoreet, sem id posuere condimentum, 
-                            risus velit rutrum mauris, quis.</p>
+                        <p class="card-text text-justify-custom">My background is in architecture, construction, 
+                        and both mechanical and electrical engineering, where I have developed a comprehensive understanding
+                        of various technical and structural disciplines. Now, I am pivoting my career towards Full Stack 
+                        Development, eager to leverage my extensive background and problem-solving skills in a new and dynamic 
+                        field. This transition reflects my continuous passion for learning and adapting to new challenges.</p>
                     </div>
                     <div class="card-footer text-center">
                         <a href="https://www.linkedin.com/in/david-cotter-3a4aba80/" target="_blank"
