Add to the about section

--- a/templates/about.html
+++ b/templates/about.html
@@ -22,7 +22,7 @@
         <hr class="w-50 mx-auto mt-5">
     </div>
 
-    <h2 class="mb-4 text-center members"><strong>Invisible Spots Team Members</strong></h2>
+    <h2 class="mb-4 text-center members"><strong>Inclusive Spots Team Members</strong></h2>
 
 
 
@@ -35,13 +35,11 @@
                         src="{% static 'images\aoife.png' %}" alt="Aoife image">
                     <div class="card-body text-center">
                         <h5 class="card-title fw-bold members">Aoife</h5>
-                        <p class="card-text text-justify-custom">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Fusce laoreet mi sed risus tincidunt sagittis. Aenean a risus
-                            ex. Integer non ultrices felis. Cras vel massa in ipsum mattis efficitur.
-                            Curabitur vitae rhoncus magna. Suspendisse ullamcorper gravida elementum.
-                            Vestibulum ut pellentesque sem. Aenean bibendum maximus velit. Proin eu augue
-                            vel ex aliquam fermentum a eu turpis. Maecenas laoreet, sem id posuere condimentum,
-                            risus velit rutrum mauris, quis.</p>
+                            <p class="card-text text-justify-custom">A junior full stack developer and recent graduate from Code Institute, 
+                                passionate about using technology to foster inclusivity and create positive change.  I am thrilled to contribute to 
+                                this meaningful project, aiming to create a supportive and vibrant space where everyone can feel valued and celebrated. 
+                                I'm excited to bring my skills and enthusiasm to this initiative and help build a brighter, more inclusive future for all.
+                            </p>
                     </div>
                     <div class="card-footer text-center">
                         <a href="https://www.linkedin.com/in/aoife-kirby-0b4040180/" target="_blank"
