--- a/static/css/style.css
+++ b/static/css/style.css
@@ -238,12 +238,12 @@ footer.text-center {
   color: var(--light-text);
 }
 
-/*----- MAP -----*/
-#map {
-  height: 20vh;
-  width: 100%;
-  background-color: #eee;
+#venues-page .venue-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
 }
+
 
 /* Media queries */
 @media (min-width: 1200px) {
