--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,6 @@
     <!-- Fontawesome - Script -->
     <script src="https://kit.fontawesome.com/c3c0f5e49e.js" crossorigin="anonymous">
     </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 
     <!-- Bootstrap CSS - Link (Critical CSS) -->
     <link
@@ -36,10 +33,7 @@
       {% endblock content %}
     </main>
     {% include 'includes/footer.html' %}
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js'></>
     <script defer src="index.js"></script>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <script href="{% static 'js/script.js' %}"></script>
   </body>
 </html>
