Edit venue page styling

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <header>
-<nav class="navbar fixed-top navbar-expand-lg custom-navbar">
+<nav class="navbar custom-navbar fixed-top navbar-expand-lg custom-navbar">
     <div class="container-fluid px-5">
         <a class="navbar-brand" href="{% url 'home' %}" aria-label="link to Home Page">
             <img class="me-3" src="{% static 'images/white-logo.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">Inclusive Spots
