chore: correct closing tag error introduced in recent pr

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
       {% endblock content %}
     </main>
     {% include 'includes/footer.html' %}
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js'></>
+    <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js'></script>
     <script defer src="index.js"></script>
   </body>
 </html>
